Fix button clearance, overflow handled correctly, and settings cant be stacted from controls anymore

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
 .center {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: safe center;
   width: 100%;
 }
 
